Import 5x9 ascii resource
I spent a whole day trying to convert my font to a ttf. I guess I'm just gonna have to render it myself. :-(

--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -27,5 +27,7 @@
   <file>./Tools/translate e.png</file>
   <file>./Cursors/circle b.pbm</file>
   <file>./Cursors/circle m.pbm</file>
+  <file>./Fonts/5x9 ascii.atlas</file>
+  <file>./Fonts/5x9 ascii.png</file>
 </qresource>
 </RCC>
