Implement SV graph

--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -17,5 +17,7 @@
   <file>./Cursors/circle b.pbm</file>
   <file>./Cursors/circle m.pbm</file>
   <file>./Fonts/5x7ascii.ttf</file>
+  <file>./Color Picker/sv circle p.pbm</file>
+  <file>./Color Picker/sv circle s.pbm</file>
 </qresource>
 </RCC>
