Make selected palette color easier to see

--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -20,6 +20,7 @@
   <file>./Color Picker/sv circle s.pbm</file>
   <file>./Color Picker/slider bar p.pbm</file>
   <file>./Color Picker/slider bar s.pbm</file>
+  <file>./Color Picker/palette select.pbm</file>
   <file>./Timeline/add.pbm</file>
   <file>./Timeline/begin linked cell.pbm</file>
   <file>./Timeline/cell.pbm</file>
