Add some comboboxes to export dialog
I've been having a lot of trouble with the comboboxes.

https://forum.qt.io/topic/105191/why-isn-t-a-qcombobox-positioned-correctly-in-a-layout/10

I'm sure how best to deal with this issue. I think I might leave it broken for the time being.

--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -38,5 +38,6 @@
   <file>./Formats/rgba.png</file>
   <file>./Formats/gray.png</file>
   <file>./Formats/index.png</file>
+  <file>./combobox arrow.pbm</file>
 </qresource>
 </RCC>
