Add linear gradient tool

--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -12,6 +12,7 @@
   <file>./Tools/filled circle.png</file>
   <file>./Tools/stroked rectangle.png</file>
   <file>./Tools/filled rectangle.png</file>
+  <file>./Tools/linear gradient.png</file>
   <file>./Tools/translate.png</file>
   <file>./Tools/flip.png</file>
   <file>./Tools/rotate.png</file>
