--- a/Resources/resources.qrc
+++ b/Resources/resources.qrc
@@ -21,9 +21,9 @@
   <file>./Color Picker/slider bar p.png</file>
   <file>./Color Picker/slider bar s.png</file>
   <file>./Color Picker/palette select.png</file>
-  <file>./Timeline/cell.png</file>
-  <file>./Timeline/begin linked cell.png</file>
-  <file>./Timeline/end linked cell.png</file>
+  <file>./Timeline/cel.png</file>
+  <file>./Timeline/begin linked cel.png</file>
+  <file>./Timeline/end linked cel.png</file>
   <file>./Timeline/add.png</file>
   <file>./Timeline/remove.png</file>
   <file>./Timeline/link.png</file>
